--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ a {
     color: #01aab6;
     color: #0ca6ab;
     color: #1aadb2;
+    /* color: #16acb1; */
     text-decoration: none; 
 }
 
@@ -97,6 +98,7 @@ a:hover {
     color: #00909b;
     color: #15a1a6;
     color: #119ba0;
+    color: #11a1a6;
     /* color: #00838c; */
     /* color: #008992; */
     text-decoration: underline;
@@ -112,6 +114,7 @@ hr {
 button {
     font-family: 'Poppins', sans-serif;
 }
+
 
 /* ===============( Navigation )============== */
 .navigation {
@@ -177,7 +180,9 @@ button {
     /* background-image: linear-gradient(90deg, #ebcf84, #7ab3cc, #587ec1); */ /* -- old --*/
 
     background-color: #01aab6;
+
     background-color: #1aadb2;
+    /* background-color: #16acb1; */
 }
 
 /* .nav-menu:hover {
@@ -302,6 +307,9 @@ section.hero {
     color: #ade3e7;
 
     color: #a2e4e8;
+
+    color: #aee5e9;
+    color: #ace4e7;
 
     font-size: 190px;
     font-size: 180px;
@@ -441,7 +449,7 @@ section.intro {
     color: #3f82b6;
     color: #666;
     color: #999;
-    color: #aaa;
+    /* color: #aaa; */
     /* color: #888; */
 }
 
@@ -496,9 +504,10 @@ section.footer {
     background-color: #dadada;
     border-radius: 20px;
     /* border-radius: 18px; */
-    margin-bottom: 6rem;
+    margin: 6rem auto 1rem;
     /* margin-bottom: 4rem; */
     padding: 1rem 3rem;
+    padding: 1.5rem 3rem;
     text-align: center;
 
     background-color: #6998c6;
@@ -506,18 +515,30 @@ section.footer {
     background-color: rgba(113, 164, 204, 0.25);
     background-color: rgba(0, 120, 128, 0.1);
     background-color: rgb(32 32 32 / 8%);
+    background-color: rgb(32 32 32 / 0%);
     /* border-radius: 16px; */
+
+    margin: auto;
+    background-color: rgba(132, 161, 162, 0.3);
+    background-color: rgb(32 32 32 / 14%);
+    background-color: rgb(51 51 51 / 15%);
+    background-color: rgb(51 51 51 / 0%);
+    border-radius: 0;
+    max-width: 100%;
 }
 
 .footer-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    max-width: 1024px;
+    margin: auto;
 }
 
 .footer-title {
     color: #333;
-    font-size: 24px;
+    font-size: 22px;
     font-weight: 600;
     font-family: 'EB Garamond', serif;
 }
@@ -545,3 +566,87 @@ section.footer p:last-child {
     text-decoration: underline;
     /* color: #01aab6; */
 }
+
+
+.panorama-roadmap {
+    background-color: #e4e4e4;
+    background-color: #e8e8e8;
+    background-color: rgb(127 173 174 / 10%);
+    background-color: rgba(132, 161, 162, 0.1);
+    /* background-color: rgba(132, 161, 162, 0.08);
+    
+    */
+}
+
+/* roadmap section */
+.roadmaps {
+    /* display: inline-flex; */
+    /* margin-bottom: 1rem; */
+    margin-bottom: -0.25rem;
+}
+
+.roadmap-item-link {
+    /* color: #179a9f; */
+    margin: 0 .75rem 1.5rem;
+    display: inline-block;
+}
+
+.roadmap-item-link:hover {
+    text-decoration: none;
+}
+
+.roadmap-item {
+    /* width: 100%; */
+    padding: 2.5rem 3rem;
+    /* margin: 1.5rem; */
+    /* margin: 0 1.5rem 1.5rem; */
+    /* background-color: rgb(0 0 0 / 6%); */
+    /* background-color: rgb(47 133 136 / 15%); */
+    border-radius: 28px;
+    display: inline-block;
+
+    /* margin-left: 0; */
+    color: #1aadb2;
+    color: #179a9f;
+    font-weight: 500;
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    padding: 2rem;
+    border-radius: 24px;
+    border: 3px solid #1aadb2;
+
+    /* font-size: 20px; */
+    /* font-weight: 600; */
+    padding: 1.25rem 2.5rem;
+    border-radius: 18px;
+    padding: 1rem 2rem;
+    /* border: 2.5px solid #1aadb2; */
+    font-size: 16px;
+    padding: 1rem 2rem;
+}
+
+.roadmap-item:hover {
+    background-color: #1aadb2;
+    color: white;
+    cursor: pointer;
+}
+
+.roadmap-item:first-child {
+    margin-left: 0;
+}
+
+.roadmap-item:last-child {
+    margin-right: 0;
+}
+
+.roadmap-item--list {
+    text-align: left;
+    padding-inline-start: 0px;
+    padding-inline-start: 1.125rem;
+    padding-inline-start: 1rem;
+}
+
+.roadmap-item--list li {
+    margin-bottom: .375rem;
+}
+
